# blarney

./: .envrc  .gitignore  .gitmodules  Bit.hs  Blarney-Backend-NewSMT.html  Blarney-Backend-SMT-BasicDefinitions.html  Blarney-Backend-SMT-NetlistUtils.html  Blarney-Backend-SMT-Utils.html  Blarney-Backend-SMT.html  Blarney-Backend-Simulation.html  Blarney-Backend-Verilog.html  Blarney-Backend.html  Blarney-BitPat.html  Blarney-BitScan.html  Blarney-ClientServer.html  Blarney-Connectable.html  Blarney-Core-BV.html  Blarney-Core-Bit.html  Blarney-Core-Bits.html  Blarney-Core-ClockReset.html  Blarney-Core-Common.html  Blarney-Core-FShow.html  Blarney-Core-Flatten.html  Blarney-Core-IfThenElse.html  Blarney-Core-Interface.html  Blarney-Core-JList.html  Blarney-Core-Lookup.html  Blarney-Core-Module.html  Blarney-Core-NetHelpers.html  Blarney-Core-Opts.html  Blarney-Core-Prelude.html  Blarney-Core-Prim.html  Blarney-Core-RAM.html  Blarney-Core-RTL.html  Blarney-Core-Ternary.html  Blarney-Core-Utils.html  Blarney-Core.html  Blarney-Interconnect.html  Blarney-Misc-ANSIEscapeSequences.html  Blarney-Misc-MonadLoops.html  (+83 more)
.github/workflows/: documentation.yml
Blarney/: Action.hs  Bit.hs  RTL.hs  TypeIndex.hs
C/: BitVec.cpp  BitVec.h  FPOps.h  Makefile
Doc/: ByExample.adoc
Examples/: BlarneyTest.hs  Makefile  blarneyTest.mk
Examples/Adder/: Adder.hs  Makefile
Examples/Background/: Background.hs  Background.out  Makefile
Examples/BasicRTL/: BasicRTL.hs  BasicRTL.out  Makefile
Examples/Bit0/: Bit0.hs  Bit0.out  Makefile
Examples/BitPat/: BitPat.hs  BitPat.out  Makefile
Examples/BitScan/: BitScan.hs  BitScan.out  Makefile
Examples/CPU/: CPU.hs  CPU.out  Makefile  Spec.hs  Spec.out  instrs.hex
Examples/CheckAdder/: CheckAdder.hs  Makefile
Examples/CheckBasicCircuits/: CheckBasicCircuits.hs  Makefile
Examples/CheckFirstHot/: CheckFirstHot.hs  Makefile
Examples/CheckQueue/: CheckQueue.hs  Makefile
Examples/CheckSklansky/: CheckSklansky.hs  Makefile
Examples/Counter/: Counter.hs  Makefile
Examples/Derive/: Derive.hs  Derive.out  Makefile
Examples/Either/: Either.hs  Either.out  Makefile
Examples/FIFO/: FIFO.hs  FIFO.out  Makefile
Examples/Factorial/: Fact.hs  Fact.out  Factorial.hs  Makefile
Examples/FloatingPoint/: FP.hs  FP.out  Makefile
Examples/GCDFarm/: GCDFarm.hs  GCDFarm.out  Makefile
Examples/Heat/: Heat.hs  Heat.out  Makefile
Examples/Interface/: Interface.hs  Interface.out  Makefile
Examples/Iterator/: Iterator.hs  Makefile
Examples/KoenClaessen/: KoenClaessen.hs  Makefile
Examples/Lookup/: Lookup.hs  Lookup.out  Makefile
Examples/MasterSlave/: Makefile  MasterSlave.hs  MasterSlave.out
Examples/MeanFilter/: Heat.hs  Heat.out  Makefile  Mesh.hs
Examples/MixedRAM/: .MixedRAM.hs.swp  Makefile  MixedRAM.hs  MixedRAM.out
Examples/NameBits/: Makefile  NameBits.hs  NameBits.out
Examples/NoC/: Makefile  NoC.hs  NoC.out
Examples/Option/: Makefile  Option.hs  Option.out
Examples/OptionExample/: Makefile  OptionExample.hs  OptionExample.out
Examples/Pebbles/: CSR.hs  DataMem.hs  Main.hs  Makefile  Pebbles.hs  Pipeline.hs  README.md  RV32I.hs  Trap.hs
Examples/Queue/: Makefile  Queue  Queue.hi  Queue.hs  Queue.out
Examples/RAM/: Makefile  RAM.hs  RAM.out
Examples/RAMBE/: .RAMBE.hs.swp  Makefile  RAMBE.hs  RAMBE.out
Examples/RAMQuad/: Makefile  RAMQuad.hs  RAMQuad.out
Examples/ReadWriteRAM/: MyMod.hs  PipelineTest.hs  ReadWriteRAM.hs  run_pipe_test.sh
Examples/Reset/: Makefile  Reset.hs  Reset.out
Examples/SizedStack/: Makefile  SizedStack.hs  SizedStack.out
Examples/Sklansky/: Makefile  Sklansky.hs
Examples/Sorter/: Makefile  Sorter.hs  Sorter.out
Examples/SourceSink/: Makefile  SourceSink.hs  SourceSink.out
Examples/SourceSinkStream/: Makefile  SourceSinkStream.hs
Examples/Stack/: Makefile  Stack.hs  Stack.out
Examples/StackTesting/: Makefile  Stack.hs  StackTesting.hs
Examples/Stone/: .Pipeline.hs.swp  .RV32I.hs.swp  DataMem.hs  Pipeline.hs  RV32I.hs  prog.hex
Examples/TriState/: Makefile  TriState.hs
Examples/Union/: Makefile  Union.hs
Examples/UnweightedASP/: ASP.hs  ASPDirect.hs  ASPDirect.out  ASPEngine.hs  ASPEngine.out  ASPStream.hs  ASPStream.out  Makefile  Network.hs  n1.edges  n2.edges
Examples/UpDownCounter/: Counter.hs  Counter.out  Makefile  UpDownCounter.hs  UpDownCounter.out
Examples/VectorAdd/: VectorAdd.hs  run_pipe_test.sh
Examples/Vectors/: Makefile  Vectors.hs  Vectors.out
Haskell/: Blarney.hs
Haskell/Blarney/: BV.hs  Backend.hs  Bit.hs  BitPat.h  BitPat.hs  (+48 more)
Scripts/: blc  blci
Test/: namer.conf  test.sh
Verilog/: BlockRAM.v  BlockRAMBE.sv  BlockRAMDual.v  BlockRAMDualBE.sv  BlockRAMQuad.v  BlockRAMTrueDual.v  BlockRAMTrueDualBE.sv  BlockRAMTrueDualMixed.v  FPAdd32.v  FPCmp32.v  FPDiv32.v  FPFromInt32.v  FPMul32.v  FPSqrt32.v  FPSub32.v  FPToInt32.v
examples/: FIFO.hs  Mesh.hs
modules/: Blarney.hs
(+153 files in other folders)
